# raylibs---c-template

./: LICENSE  README.en.md  README.md  cmake用法.txt
temple/: CMakeLists.txt  main  makefile
temple/head/: main.hpp  tem.hpp
temple/src/: main.cpp  tem.cpp
